<resources>

    <string name="app_name">Court reservation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Badminton courts booking</string>
    <string name="nav_header_subtitle">Badminton court manager and booking app</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="menu_courts">Courts</string>
    <string name="menu_players">Players</string>
    <string name="menu_reservations">Reservations</string>

    <!-- Players / edit players -->
    <string name="playersActivity_homePage">Players</string>
    <string name="hint_pl_firstname">Firstname</string>
    <string name="hint_pl_lastname">Lastname</string>
    <string name="hint_pl_birthdate">Birthdate</string>
    <string name="hint_pl_gender">Gender</string>
    <string name="hint_pl_address">Address</string>
    <string name="hint_pl_phoneNbr">Phone number</string>
    <string name="btn_editPlayerActivity_create">Confirm</string>
    <string name="btn_editPlayerActivity_edit">Apply</string>
    <string name="title_editPlayerActivity_new">Create player</string>
    <string name="title_editPlayerActivity_edit">Edit player</string>
    <string name="toast_editPlayerActivity_new">Player created</string>
    <string name="toast_editPlayerActivity_edit">Player edited</string>
    <string name="toast_playersActivity_delete">Player deleted</string>
    <string name="alert_playersActivity_deleteTitle">Delete player</string>
    <string name="alert_playersActivity_deleteMessage">Do you really want to delete %1$s?</string>
    <string name="alert_playersActivity_btnPositive">Yes</string>
    <string name="alert_playersActivity_btnNegative">No</string>
    <string name="errorRequired_player_firstname">Firstname is required</string>
    <string name="errorRequired_player_lastname">Lastname is required</string>
    <string name="errorRequired_player_birthdate">Birthdate is required</string>

    <!--Courts / edit courts-->
    <string name="courtsActivity_homePage">Courts</string>
    <string name="hint_pl_courtName">Courts name</string>
    <string name="hint_pl_price">Courts hourly price</string>
    <string name="hint_pl_description">Courts description</string>
    <string name="editCourt_action_delete">Delete court</string>
    <string name="alert_editCourtActivity_deleteMessage">Do your really want to delete this court?</string>

    <!--Court activity-->
    <string name="title_editCourtActivity_new">Create court</string>
    <string name="title_editCourtActivity_edit">Edit court</string>
    <string name="toast_editCourtActivity_new">Court created</string>
    <string name="toast_editCourtActivity_edit">Court edited</string>
    <string name="toast_editCourtActivity_delete">Court deleted</string>
    <string name="errorRequired_court_name">Court\'s name is required</string>
    <string name="errorRequired_court_address">Court\'s address is required</string>
    <string name="errorRequired_court_price">Court\'s price is required</string>
    <string name="errorRequired_court_description">Courts description is required</string>

    <!--Court Reservation-->
    <string name="hint_cr_date">Date</string>
    <string name="cr_homePage">New court reservation</string>
    <string name="hint_tv_time">Time</string>
    <string name="hint_tv_player">Player</string>
    <string name="title_tv_courtName">Court name</string>
    <string name="title_tv_courtPrice">Court price</string>
    <string name="title_cr">Court reservation</string>
    <string name="errorRequired_reservation_date">Reservation date is required</string>
    <string name="errorRequired_reservation_time">Reservation time is required</string>
    <string name="dialog_reservation_exists">There is already a reservation for this court at this time."\n"Please choose another time or date.</string>
    <string name="dialog_reservation_past">Time or date is in the past."\n"Please choose another time or date.</string>
    <string name="dialog_reservation_exists_title">Oops!</string>
    <string name="toast_reservation_new">Reservation saved</string>
    <string name="hint_sp_time">Select time</string>

    <!--Reservations -->
    <string name="reservation_homePage">Reservations</string>
    <string name="alert_reservationActivity_deleteTitle">Delete reservation</string>
    <string name="alert_reservationActivity_deleteMessage">Do you really want to delete this reservation?</string>
    <string name="toast_reservationActivity_delete">Reservation deleted</string>

    <!-- Settings / About -->
    <string name="title_settings">Settings</string>
    <string name="pref_darkMode_summary">Switch between light and dark</string>
    <string name="pref_darkMode_title">Dark mode</string>
    <string name="title_about">About</string>
    <string name="text_about">This application was developed as part of the mobile development course (644-1) project at the HES-SO Valais-Wallis. </string>
    <string name="title_contact">Contacts</string>
    <string name="contact_text">Here are the addresses of the developers: \n - luca.delbuono@students.hevs.ch, \n - francois.brouchoud@hevs.ch</string>
    <string name="feedback_submit_button">Submit feedback</string>

</resources>