<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        tools:context=".ui.management.AboutActivity">

        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_about"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_about" />

        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_contact"
            android:textStyle="bold"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/contact_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink = "email"
            android:text="@string/contact_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_feedback_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="20dp"
            android:hint="Enter feedback to send to developers"
            app:hintEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_feedback_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/submit_comment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feedback_submit_button" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="100dp"/>

    </LinearLayout>
</ScrollView>
