<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        tools:context=".ui.player.EditPlayerActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            app:boxBackgroundColor="#00FFFFFF"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_PlayerFirstname"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/hint_pl_firstname"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            app:boxBackgroundColor="#00FFFFFF"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_PlayerLastname"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/hint_pl_lastname"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            app:boxBackgroundColor="#00FFFFFF"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_PlayerBirthdate"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_pl_birthdate"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            app:boxBackgroundColor="#00FFFFFF"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_PlayerPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/hint_pl_phoneNbr"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            app:boxBackgroundColor="#00FFFFFF">
            <TextView
                android:id="@+id/tv_Gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_pl_gender"
                android:textStyle="bold"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
            <Spinner
                android:id="@+id/sp_Gender"
                android:layout_width="match_parent"
                android:layout_height="52dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            app:boxBackgroundColor="#00FFFFFF"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_PlayerAddress"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:hint="@string/hint_pl_address"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_editPlayerActivity_create" />

    </LinearLayout>
</ScrollView>

